--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ body{
       text-align: center;
       padding: 2%;
       margin: 0 auto;
-      /* border-radius: 50px 50px;
-      border: 5px solid rgba(255, 0, 0, 0.541);
-      border-top: none; */
+      border-radius: 50px 50px;
+      border: 5px solid rgba(25, 0, 255, 0.205);
+      border-top: none;
   }
   
    h1{
@@ -45,8 +45,8 @@ body{
       background-color: #1e06f348 ;
       font-family: 'Share Tech', sans-serif;
       font-size: larger;
-      /* border-radius: 50px ;
-      border: 5px solid black; */
+      border-radius: 50px ;
+      border: 5px solid rgba(0, 0, 0, 0.384);
   }
   
   .footerContainer{
